applicationDeveloper/ingress-related-definitions/nginx-ingress-controller.yml
# deprecated:
# apiVersion: extensions/v1beta1
# apiVersion: networking.k8s.io/v1
# read:
# - https://kubernetes.io/docs/concepts/services-networking/ingress/
# - https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
# to eliminate IDE warnings:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-space
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          args:
            - /nginx-ingress-controller
            -  --configmap=${POD_NAMESPACE}/nginx-cofiguration
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
