applicationDeveloper/ingress-related-definitions/nginx-ingress-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: ingress-space
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
      name: http
    - port: 443
      protocol: TCP
      name: https
  selector:
    name: nginx-ingress
