applicationDeveloper/ingress-related-definitions/ingress-wear-resource-with-rules.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
  namespace: app-space
#  namespace: ingress-space
spec:
  rules:
    - http:
       paths:
         - path: /wear
           backend:
              serviceName: wear-service
              servicePort: 80
         - path: /watch
           backend:
             serviceName: watch-service
             servicePort: 80
