applicationDeveloper/ingress-related-definitions/ingress-wear-resource.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
  namespace: ingress-space
spec:
  backend:
    serviceName: wear-service
    servicePort: 80
